--- a/varmote-2024/foredragningslista-varmote-2024/preliminar-foredragningslista-varmote-2024.tex
+++ b/varmote-2024/foredragningslista-varmote-2024/preliminar-foredragningslista-varmote-2024.tex
@@ -53,26 +53,30 @@
         \end{enumerate}
   \item Styrelsen informerar
   \item Sektionens ekonomiska läge
-  \item Budgetrevidering
+  \item Fastställande av rambudget och sektionsavgift
   \item Motioner och propositioner
         \begin{enumerate}[label*=\arabic*.,leftmargin=3em]
           \item Inga inkomna motioner eller propositioner.
         \end{enumerate}
-  \item Presentation av STABEN 24/25
+  \item Presentation av D-Group 24/25
+  \item PResentation av Donna 24/25
   \item Personval
         \begin{enumerate}[label*=\arabic*.,leftmargin=3em]
-          \item Sektionsordförande 24/25
-          \item Sektionskassör 24/25
-          \item Vice ordförande 24/25
-          \item Sekreterare 24/25
-          \item Utbildningsutskottets ordförande 24/25
-          \item Arbetsmiljöombud 24/25
-          \item Eventutskottets ordförande 24/25
-          \item Styrelseledamöter 24/25
-          \item Damföreningens ordförande 24/25
-          \item Damföreningens kassör 24/25
-          \item Festeriets ordförande 24/25
-          \item Festeriets kassör 24/25
+          \item Marknadsföringsutskottets ordförande 24/25
+          \item Näringslivsansvarig 24/25
+          \item Studienämndsordförande D 24/25
+          \item Studienämndsordförande U 24/25
+          \item Studienämndsordförande IP 24/25
+          \item Studienämndsordförande IT 24/25
+          \item Studienämndsordförande masternivå 24/25
+          \item Intendent 24/25
+          \item Infochef 24/25
+          \item Webmaster 24/25
+          \item Revisorer 24/25
+          \item Valberedningens ordförande 24/25
+          \item Valberedningens ledamöter 24/25
+          \item Alumniutskottets ordförande 24/25
+          \item Pubutskottets ordförande 24/25
         \end{enumerate}
   \item Medaljutdelning
   \item Övrigt
