--- a/varmote-2024/foredragningslista-varmote-2024/slutgiltig-foredragningslista-varmote-2024.tex
+++ b/varmote-2024/foredragningslista-varmote-2024/slutgiltig-foredragningslista-varmote-2024.tex
@@ -3,14 +3,14 @@
 % \usepackage{titling}
 \usepackage{enumitem}
 
-\title{Preliminär föredragningslista}
-\date{2024-04-05} 
+\title{Slutgiltig föredragningslista}
+\date{2024-04-17} 
 
 \begin{document}
 
 \large
 \begin{center}
-  {\LARGE\bfseries Preliminär föredragningslista för D-sektionens vårmöte 2024}
+  {\LARGE\bfseries Slutgiltig föredragningslista för D-sektionens vårmöte 2024}
   \vspace{2mm}
 \end{center}
 
@@ -31,6 +31,9 @@
   \item Sektionens ekonomiska läge
   \item Fastställande av rambudget och sektionsavgift
   \item Motioner och propositioner
+        \begin{enumerate}[label*=\arabic*.,leftmargin=3em]
+          \item Proposition angående införande av en utmärkelse för extraordinära insatser
+        \end{enumerate}
   \item Presentation av D-Group 24/25
   \item Presentation av Donna 24/25
   \item Personval
