--- a/varmote-2024/kallelse-varmote-2024/kallelse-varmote-2024.tex
+++ b/varmote-2024/kallelse-varmote-2024/kallelse-varmote-2024.tex
@@ -3,7 +3,7 @@
 \usepackage{titling}
 
 \title{Kallelse till vårmöte}
-\date{2024-xx-xx} 
+\date{2024-04-05} 
 
 \begin{document}
 % \hspace{0pt}
@@ -33,7 +33,7 @@ Medlemmar i sektionen kallas till ordinarie vårmöte den 21 april 2024.
 
 Detta är ett av sektionens tre ordinarie sektionsmöten. Sektionsmöten är sektionens högst beslutande organ där du som medlem har möjligheten att vara med och besluta om sektionens verksamhet. 
 
-Styrelsen bjuder även på mat, så missa inte anmälan för det! Sista anmälningsdag är x/x. Mer information finns på hemsidan.
+Styrelsen bjuder även på mat, så missa inte anmälan för det! Sista anmälningsdag är 16/4. Mer information finns på hemsidan.
 
 \vspace*{4mm}
 \begin{itemize}
