Hade missat att pusha

--- a/varmote-2024/protokoll-varmote-2024/protokoll-varmote-2024.tex
+++ b/varmote-2024/protokoll-varmote-2024/protokoll-varmote-2024.tex
@@ -11,7 +11,7 @@
 \newcommand{\rostlangd}[1]{\motetbeslutar\att{} fastställa röstlängden till \textbf{#1}.}
 
 \title{Protokoll | D-sektionens vårmöte 2024}
-\date{2024-xx-xx}
+\date{2024-04-30}
 
 \begin{document}
 % ----------------------
@@ -56,7 +56,7 @@
 
 % ----------------------
 \section{Mötets öppnande}
-Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \textbf{xx:xx}.
+Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \textbf{15:32}.
 
 
 
@@ -70,7 +70,7 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 \motetbeslutar\att{} välja \textbf{Felix Ramnelöv} till mötessekreterare.
 
 \subsection{Justeringsperson, Rösträknare}
-\motetbeslutar\att{} välja \textbf{xx} och \textbf{xx} till justeringspersoner tillika rösträknare.
+\motetbeslutar\att{} välja \textbf{Adam Rylander} och \textbf{Tove Winddotter} till justeringspersoner tillika rösträknare.
 
 
 % ----------------------
@@ -78,7 +78,7 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 
 
 
-\rostlangd{xx}
+\rostlangd{71}
 
 
 
@@ -92,7 +92,6 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 
 % ----------------------
 \section{Fastställande av föredragningslista}
-\textbf{Silva Havluciyan} presenterar ändringar från den preliminära till den slutgiltiga föredragningslistan.
 
 \textbf{Silva Havluciyan} föreslår att fastställa den slutgiltiga föredragningslistan.
 
@@ -108,28 +107,43 @@ Sektionsordförande \textbf{Silva Havluciyan} förklarar mötet öppnat kl \text
 % ----------------------
 \section{Styrelsen informerar}
 
+Sektionsordförande \textbf{Silva Havluciyan} presenterar på sektionsmötet.
+
+Imorgon (22 april) är sista dagen att anmäla sig till kryssningen.
+
+Det går fortfarande att söka till vakantsatta poster, även från tidigare möten.
 
 % ----------------------
 \section{Sektionens ekonomiska läge}
 Sektionskassör \textbf{Henrik Thorén} presenterar på sektionsmötet.
 
-
+Vi har kommit en bra bit in på läsåret och börjar få en preliminär bild av hur det ekonomiska läget ser ut. Det har varit flera större frånsteg, framförallt när det kommer till Näringslivsutskottet som kom igång sent. Även Pubutskottet har haft en mindre frånsteg i sin budget. Däremot har det gått bättre än planerat för Arbetsmarknadsgruppen och STABEN, vilket gör att det totala resultatet kan bli bättre än budgeterat.
 
 % ----------------------
 \section{Fastställande av rambudget och sektionsavgift}
-Sektionskassör \textbf{Henrik Thorén} presenterar föreslagen rambudget för verksamhetsåret 24/25 och föreslår medlemsavgiften för verksamhetsårer 24/25 till x kr. Budgetrevideringen finns på \url{https://d-sektionen.se/varmote-2024/}.
+Sektionskassör \textbf{Henrik Thorén} presenterar föreslagen rambudget för verksamhetsåret 24/25 och föreslår medlemsavgiften för verksamhetsåret 24/25 till 0 kr. Budgetrevideringen finns på \url{https://d-sektionen.se/varmote-2024/}.
 
-\rostlangd{xx}
+\rostlangd{67}
 
-\motetbeslutar\att{} fastställa den nya rambudgeten.
+\motetbeslutar\att{} fastställa den nya rambudgeten samt fastställa medlemsavgiften till 0 kr.
 
+\motetbeslutar\att{} ajournera mötet till kl. \textbf{17:00}.
+
+\motetbeslutar\att{} återuppta mötet kl. \textbf{17:07}.
 
 % ----------------------
 \section{Motioner och propositioner}
 
 \subsection{Proposition angående införande av en utmärkelse för
-extraordinära insatser}
+	extraordinära insatser}
 
+\textbf{Silva Havluciyan} presenterar propositionen.
+
+Diskussion uppstår.
+
+\rostlangd{75}
+
+\motetbeslutar\att{} att inte införa en ny medalj utan istället uppmana att nominera till guldmedaljen oftare.
 
 % ----------------------
 \section{Presentation av D-Group 24/25}
@@ -141,54 +155,260 @@ D-Group 24/25 presenterar sig själva och svarar på frågor.
 
 Donna 24/25 presenterar sig själva och svarar på frågor.
 
-\motetbeslutar\att{} ajournera mötet till kl. \textbf{xx:xx}.
-
-\motetbeslutar\att{} återuppta mötet kl. \textbf{xx:xx}.
-
-\rostlangd{xx}
-
 % ----------------------
-\pagebreak
 \section{Personval}
 
-\textbf{xx} läser upp valberedningens rekryteringsprocess inför vårmötet 2024.
+\textbf{Fredrik Palm} läser upp valberedningens rekryteringsprocess inför vårmötet 2024.
 
 \subsection{Marknadsföringsutskottets ordförande 24/25}
 
-Valberedningen nominerar \textbf{x} till marknadsföringsutskottets ordförande 24/25.
+Valberedningen nominerar \textbf{Lucas Spåls} till marknadsföringsutskottets ordförande 24/25.
 
-\textbf{xx} presenterar sig själv.\\
-\textbf{xx} svarar på frågor.\\
-\textbf{xx} lämnar mötet.
+\textbf{Lucas Spåls} presenterar sig själv.\\
+\textbf{Lucas Spåls} svarar på frågor.\\
+\textbf{Lucas Spåls} lämnar mötet.
 
-\textbf{xx} läser upp Valberedningens motivering för \textbf{Erik Nordström}.
+\textbf{Fredrik Palm} läser upp valberedningens motivering för \textbf{Lucas Spåls}.
 
-Disskussion uppstår.
+Diskussion uppstår.
 
-\rostlangd{xx}
+\rostlangd{70}
 
-\motetbeslutar\att{} välja \textbf{xx} till Marknadsföringsutskottets ordförande 24/25.
+\motetbeslutar\att{} välja \textbf{Lucas Spåls} till marknadsföringsutskottets ordförande 24/25.
 
-% Övriga personval
+\subsection{Näringslivsansvarig 24/25}
+
+Valberedningen nominerar \textbf{Belmin Batic} till näringslivsansvarig 24/25.
+
+\textbf{Belmin Batic} presenterar sig själv.\\
+\textbf{Belmin Batic} svarar på frågor.\\
+\textbf{Belmin Batic} lämnar mötet.
+
+\textbf{Fredrik Palm} läser upp valberedningens motivering för \textbf{Belmin Batic}.
+
+Diskussion uppstår.
+
+\rostlangd{74}
+
+\motetbeslutar\att{} välja \textbf{Belmin Batic} till näringslivsansvarig 24/25.
+
+\subsection{Studienämndsordförande D 24/25}
+
+Valberedningen har ingen nominering för studienämndsordförande D 24/25.
+
+\textbf{Jack Ydehall} nominerar sig själv.
+
+\textbf{Jack Ydehall} presenterar sig själv.\\
+\textbf{Jack Ydehall} svarar på frågor.\\
+\textbf{Jack Ydehall} lämnar mötet.
+
+Diskussion uppstår.
+
+\rostlangd{73}
+
+\motetbeslutar\att{} välja \textbf{Jack Ydehall} till studienämndsordförande D 24/25.
+
+\subsection{Studienämndsordförande U 24/25}
+
+Valberedningen nominerar \textbf{Erik Luttu} till studienämndsordförande U 24/25.\\
+\textbf{Erik Luttu} mottar ej nomineringen.
+
+\rostlangd{74}
+
+\motetbeslutar\att{} vakantsätta posten studienämndsordförande U 24/25 och därmed ge styrelsen ansvaret att tillsätta posten i enlighet med §5 i reglementet.
+
+\subsection{Studienämndsordförande IP 24/25}
+
+Valberedningen har ingen nominering för studienämndsordförande IP 24/25.
+
+\motetbeslutar\att{} vakantsätta posten studienämndsordförande IP 24/25 och därmed ge styrelsen ansvaret att tillsätta posten i enlighet med §5 i reglementet.
+
+\subsection{Studienämndsordförande IT 24/25}
+
+Valberedningen har ingen nominering för studienämndsordförande IT 24/25.
+
+\motetbeslutar\att{} vakantsätta posten studienämndsordförande IT 24/25 och därmed ge styrelsen ansvaret att tillsätta posten i enlighet med §5 i reglementet.
+
+\subsection{Studienämndsordförande masternivå 24/25}
+
+Valberedningen har ingen nominering för studienämndsordförande masternivå 24/25.
+
+\motetbeslutar\att{} vakantsätta posten studienämndsordförande masternivå 24/25 och därmed ge styrelsen ansvaret att tillsätta posten i enlighet med §5 i reglementet.
+
+\subsection{Intendent 24/25}
+
+Valberedningen nominerar \textbf{Philip Batan} till intendent 24/25.
+
+\textbf{Philip Batan} presenterar sig själv.\\
+\textbf{Philip Batan} svarar på frågor.\\
+\textbf{Philip Batan} lämnar mötet.
+
+\textbf{Axel Larsson} läser upp valberedningens motivering för \textbf{Philip Batan}.
+
+Diskussion uppstår.
+
+\rostlangd{72}
+
+\motetbeslutar\att{} välja \textbf{Philip Batan} till intendent 24/25.
+
+\motetbeslutar\att{} ajournera mötet till kl. \textbf{18:40}.
+
+\motetbeslutar\att{} återuppta mötet kl. \textbf{18:42}.
+
+\subsection{Infochef 24/25}
+
+Valberedningen nominerar \textbf{Jorunn Jóhannesdóttir} till infochef 24/25.
+
+\textbf{Jorunn Jóhannesdóttir} presenterar sig själv.\\
+\textbf{Jorunn Jóhannesdóttir} svarar på frågor.\\
+\textbf{Jorunn Jóhannesdóttir} lämnar mötet.
+
+\textbf{Axel Larsson} läser upp valberedningens motivering för \textbf{Jorunn Jóhannesdóttir}.
+
+Diskussion uppstår.
+
+\rostlangd{54}
+
+\motetbeslutar\att{} välja \textbf{Jorunn Jóhannesdóttir} till infochef 24/25.
+
+\subsection{Webmaster 24/25}
+
+Valberedningen nominerar \textbf{Olle Mineur} till webmaster 24/25.
+
+\textbf{Olle Mineur} presenterar sig själv.\\
+\textbf{Olle Mineur} svarar på frågor.\\
+\textbf{Olle Mineur} lämnar mötet.
+
+\textbf{Axel Larsson} läser upp valberedningens motivering för \textbf{Olle Mineur}.
+
+Diskussion uppstår.
+
+\rostlangd{54}
+
+\motetbeslutar\att{} välja \textbf{Olle Mineur} till webmaster 24/25.
+
+\textbf{Silva Havluciyan} föreslår \textbf{Filip Nygren} till mötesordförande.
+
+\rostlangd{56}
+
+\motetbeslutar\att{} välja \textbf{Filip Nygren} till mötesordförande.
+
+\subsection{Revisorer 24/25}
+
+Styrelsen nominerar \textbf{Eric Malalatunga} och \textbf{Kajaniga Vigneswaran} till sifferrevisorer 24/25.
+
+\textbf{Henrik Thorén} läser upp de nominerades presentationer samt presenterar styrelsen motivering.
+
+\rostlangd{56}
+
+\motetbeslutar\att{} välja \textbf{Eric Malalatunga} och \textbf{Kajaniga Vigneswaran} till sifferrevisorer 24/25.
+
+Valberedningen nominerar \textbf{Silva Havluciyan} till sakrevisor 24/25.
+
+\textbf{Silva Havluciyan} presenterar sig själv.\\
+\textbf{Silva Havluciyan} svarar på frågor.\\
+\textbf{Silva Havluciyan} lämnar mötet.
+
+\textbf{Fredrik Palm} läser upp valberedningens motivering för \textbf{Silva Havluciyan}.
+
+Diskussion uppstår.
+
+\rostlangd{55}
+
+\motetbeslutar\att{} välja \textbf{Silva Havluciyan} till sakrevisor 24/25.
+
+\textbf{Filip Nygren} föreslår \textbf{Silva Havluciyan} till mötesordförande.
+
+\rostlangd{57}
+
+\motetbeslutar\att{} välja \textbf{Silva Havluciyan} till mötesordförande.
+
+\subsection{Valberedningens ordförande 24/25}
+
+Styrelsen nominerar \textbf{Tobias Elfstrand} till valberedningens ordförande 24/25.
+
+\textbf{Tobias Elfstrand} presenterar sig själv.\\
+\textbf{Tobias Elfstrand} svarar på frågor.\\
+\textbf{Tobias Elfstrand} lämnar mötet.
+
+\textbf{Filip Nygren} läser upp styrelsens motivering för \textbf{Tobias Elfstrand}.
+
+Diskussion uppstår.
+
+\rostlangd{54}
+
+\motetbeslutar\att{} välja \textbf{Tobias Elfstrand} till valberedningens ordförande 24/25.
+
+\subsection{Valberedningens ledamöter 24/25}
+
+Styrelsen nominerar \textbf{Henrik Thorén} och \textbf{Nils Kihl} till valberedningens ledamöter 24/25.
+
+\textbf{Henrik Thorén} lämnar mötet.
+
+\textbf{Nils Kihl} presenterar sig själv.\\
+\textbf{Nils Kihl} svarar på frågor.\\
+\textbf{Nils Kihl} lämnar mötet.
+
+\textbf{Filip Nygren} läser upp styrelsens motivering för \textbf{Nils Kihl}.
+
+Diskussion uppstår.
+
+\textbf{Henrik Thorén} presenterar sig själv.\\
+\textbf{Henrik Thorén} svarar på frågor.\\
+\textbf{Henrik Thorén} lämnar mötet.
+
+\textbf{Filip Nygren} läser upp styrelsens motivering för \textbf{Henrik Thorén}.
+
+Diskussion uppstår.
+
+\rostlangd{53}
+
+\motetbeslutar\att{} välja \textbf{Henrik Thorén} och \textbf{Nils Kihl} till valberedningens ledamöter 24/25 samt vakantsätta två av valberedningens ledamöter och ge styrelsen mandat för att tillsätta dessa.
+
+\subsection{Alumniutskottets ordförande 24/25}
+
+Valberedningen har ingen nominering för alumniutskottets ordförande 24/25.
 
 \pagebreak
 
+\rostlangd{56}
+
+\motetbeslutar\att{} vakantsätta posten alumniutskottets ordförande 24/25 och därmed ge styrelsen ansvaret att tillsätta posten i enlighet med §5 i reglementet.
+
+\subsection{Pubutskottets ordförande 24/25}
+
+Valberedningen nominerar \textbf{Arvid Attin} till pubutskottets ordförande 24/25.
+
+\textbf{Arvid Attin} presenterar sig själv.\\
+\textbf{Arvid Attin} svarar på frågor.\\
+\textbf{Arvid Attin} lämnar mötet.
+
+\textbf{Fredrik Palm} läser upp valberedningens motivering för \textbf{Arvid Attin}.
+
+Diskussion uppstår.
+
+\rostlangd{55}
+
+\motetbeslutar\att{} välja \textbf{Arvid Attin} till pubutskottets ordförande 24/25.
+
+% ----------------------
 \section{Medaljutdelning}
 
+\rostlangd{57}
 
+\motetbeslutar\att{} medaljutdelning sker efter mötets avslutande.
 
 % ----------------------
 \section{Övrigt}
 
+\subsection{Årets pedagog 24/25 på Datateknologsektionen}
+
+Sektionsmötet gratulerar \textbf{Fredrik Andersson} till priset årets pedagog 23/24 på Datateknologsektionen.
+
 % ----------------------
 \section{Mötets avslut}
 
-
-\textbf{Silva Havluciyan} förklarar mötet avslutat kl \textbf{xx:xx}.
-
+\textbf{Silva Havluciyan} förklarar mötet avslutat kl \textbf{20:11}.
 
 % ----------------------
-
-
-
 \end{document}
