--- a/varmote-2024/protokoll-varmote-2024/sections/rom.tex
+++ b/varmote-2024/protokoll-varmote-2024/sections/rom.tex
@@ -4,82 +4,105 @@
 \subsection{Styrelsen}
 \textbf{Filip Nygren} presenterar på sektionsmötet. 
  
-xx
+Styrelsen har hållit sektionsaktivas mid-off, tagit fram nomineringar till valberedningen och haft diskussion med LinTek om trivsel och utbildning. Dessutom planerar man för att hålla i en kryssning för sektionsaktiva och en examenssittning.
 
 \subsection{Eventutskottet}
 \textbf{Bacilika Glansholm} presenterar på sektionsmötet.
 
+Eventutskottet har hjälp Tackfestgruppen arrangera en tackfest och bokat salar för undergrupper. I framtiden ska man fortsätta stödja undergrupperna.
 
 \subsubsection{AktU}
 \textbf{Jessica Kjellin} presenterar på sektionsmötet.
 
+AktU har hållit i flera olika event som brädspelskvällar, bowling och paintball. I framtiden ska man fortsätta hålla event som en fulsittning och Pi-balen.
 
 \subsubsection{D20}
 \textbf{Alexander Bucht Linde} presenterar på sektionsmötet. 
 
+D20 har hållit i flera spelkvällar. I framtiden ska man bland annat delta på Lincon.
 
 \subsubsection{D-LAN}
 \textbf{Marcus Dahl} presenterar på sektionsmötet. 
 
+D-LAN har hållit i D-LAN och ser fram emot att bli klara för läsåret.
 
 \subsubsection{D-Band}
-\textbf{Alice Almgren} presenterar på sektionsmötet. 
+\textbf{Bacilika Glansholm} presenterar på sektionsmötet då bandledare \textbf{Alice Almgren} ej kunde närvara på mötet. 
 
+D-Band har genomfört flera spelningar på bland annat Ryds Herrgård och DÖMD. I framtiden ska de bland annat spela i Trädgårdsföreningen på Valborg.
 
 \subsubsection{SchlagU}
 \textbf{Filip Jakobsson} presenterar på sektionsmötet. 
 
+SchlagU har gjort sådant som en kareokekväll med STABEN och visning av Mellodifestivalen. I framtiden ska de bland annat ha en visning av Eurovision och musik-quiz.
 
 \subsection{Alumniutskottet}
 \textbf{Anton Eldeborg Lundin} presenterar på sektionsmötet. 
 
+Alumniutskottet har haft en generationssittning, jobbat med ett mentorskapsprogram och hållit en DÖMD-afterwork. Just nu planerar man för en sista lunchföreläsning.
 
 \subsection{Arbetsmarknadsgruppen}
 \textbf{Anastasia Saprunova} presenterar på sektionsmötet. 
 
+Arbetsmarknadsgruppen har planerat inför nästa LINK-dagarna, haft möten, intervjuer och rekryterat. Man ska snart tillsätta kommittén. LINK-dagarna kommer äga rum 6-21 november.
+
+\pagebreak
 
 \subsection{D-Group}
 \textbf{Disa Kärnbring} presenterar på sektionsmötet.
 
+D-Group har arrangerat DÖMD.
 
 \subsection{Donna}
-\textbf{Alma Mateo Johansson} presenterar på sektionsmötet.
+\textbf{Silva Havluciyan} presenterar på sektionsmötet då ingen från Donna är närvarande på mötet.
 
+Donna har haft Stora Damsittningen, kodstuga och håller på att planera inför Stilett.
 
 \subsection{Ekonomiutskottet}
 \textbf{Henrik Thorén} presenterar på sektionsmötet.
 
+Ekonomiutskottet har bokfört och fakturerat.
 
 \subsection{Marknadsföringsutskottet}
 \textbf{Oscar Karlsson} presenterar på sektionsmötet.
 
+Marknadsföringsutskottet har arrangerat D-tour, marknadsfört på en skola i Stockholm och genomfört flera hemmissioneringar. I framtiden ska man utvärdera det gångna läsåret och revidera dokument för informationsutskick.
 
 \subsection{Näringslivsutskottet}
 \textbf{Simon Ganning} presenterar på sektionsmötet.
 
+Näringslivsutskottet har haft event med företag som BCG och Sectra, man har dessutom skrivit på ett avtal med Toyota. I samtiden ska man ha fler event med företag som Mpya Digital ska inleda ett samarbete med Kollin.
 
 \subsection{Pubutskottet}
 \textbf{Olle Håkansson} presenterar på sektionsmötet.
 
+Pubutskottet har haft flera pubar och planerar inför läsårets sista pub.
 
 \subsection{STABEN}
 \textbf{Tobias Elfstrand} presenterar på sektionsmötet.
 
+STABEN har planerat för mottagningen, sytt stass, skrivit gückel, arbetat på DÖMD samt haft temasläpp på DÖMD-Gasquen. I framtiden ska man fortsätta med planering och genomföra mottagningen.
 
 \subsection{Utbildningsutskottet}
 \textbf{Darja Saed} presenterar på sektionsmötet. 
 
+Utbildningsutskottet har haft pluggstuga, hållit i kursutvärderingar och haft möten. I framtiden ska de fortsätta på samma spår.
  
 \subsection{Valberedningen}
 \textbf{Fredrik Palm} presenterar på sektionsmötet.
 
+Valberedningen har rekryterat inför vårmötet och håller på att förbereda för överlämning till nästa läsår.
+
+\pagebreak
 
 \subsection{Webbutskottet}
 \textbf{Olle Mineur} presenterar på sektionsmötet.
 
+Webbutskottet har uppdaterat medlemssidan, utvecklat mer på nya hemsidan, överfört projekt till Docker och haft kodstuga med Donna. I framtiden ska man göra färdigt med Docker, skriva dokumentation, uppdatera backend och förbereda överlämning till nästa läsår.
 
 \subsection{Werkmästeriet}
 \textbf{Joline Hellström} presenterar på sektionsmötet.
 
+Werkmästeriet har fixat med bil och inventarier, städat B23, planerat för att måla om Bettan och planerat för att rusta upp maskotar på Corson.
 
 \end{document}
